Merged in feature/PWA-1227/actual-mail-merge (pull request #805)
Feature/PWA-1227/actual mail merge

* Merge branch 'develop' into feature/PWA-1067/mail-merge-setup

* Fix tests

* Assign document source constructor param
Use last submitted detail instead of tip in mail merge resolver
Fix code smell
Update tests

* Fix broken test

* Remove unnecessary docspec linking to merge fields
Package refactor
Call out to app task services to resolve merge fields and get available fields
Validate clause text to ensure valid merge fields used
Merge clauses on clause view screen and consent doc preview
Highlight automatic merge data onscreen and doc
Try to highlight manual merge data (currently broken)
Tests

* Fix tests

* Merge branch 'develop' into feature/PWA-1227/actual-mail-merge

* Delete files added back by merge
Fix tests
Fix app error on blank clauses
Remove table no longer used

* Prefix sass with PWA
Extract test method

* Merged develop into feature/PWA-1227/actual-mail-merge

Approved-by: Michael Heyes
Approved-by: Zubaer Rahman