@@ -1,15 +1,16 @@
 package uk.co.ogauthority.pwa.service.markdown;
 
-import java.util.Collections;
 import java.util.Set;
 import org.commonmark.node.Node;
 import org.commonmark.renderer.NodeRenderer;
+import uk.co.ogauthority.pwa.service.markdown.automatic.AutomaticMergeField;
+import uk.co.ogauthority.pwa.service.markdown.manual.ManualMergeField;
 
-abstract class MailMergeNodeRenderer implements NodeRenderer {
+public abstract class MailMergeNodeRenderer implements NodeRenderer {
 
   @Override
   public Set<Class<? extends Node>> getNodeTypes() {
-    return Collections.singleton(AutomaticMergeField.class);
+    return Set.of(AutomaticMergeField.class, ManualMergeField.class);
   }
 
 }
